# skriptor

./: .dockerignore  .example.env  .gitignore  AGENTS.md  Dockerfile  Dockerfile.garage  README.md  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  garage.toml  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  push_images.sh  stdout.test  tech-stack-id.md  ts_errors.txt  vitest.config.ts  vitest.setup.ts
.VSCodeCounter/2025-05-14_11-23-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  (+1 more)
docs/: benchmark-steps-id.md  benchmark-steps.md  system-usability-survey.md  tech-stack.md  worker-steps-id.md  worker-steps.md
drizzle/: 0000_messy_ben_parker.sql  0000_military_enchantress.sql  0000_polite_eternals.sql  0001_milky_omega_flight.sql  0002_speakers_jsonb_and_segment_speaker_index.sql
e2e/: auth.spec.ts  dashboard.spec.ts  editor.spec.ts  settings.spec.ts
playwright-report/: index.html
src/: middleware.ts  proxy.ts
test-results/: .last-run.json
worker/: .dockerignore  .example.env  Dockerfile  Dockerfile.benchmark  README.md  docker-compose.yml  pyproject.toml  runpod-template.md  test_whisperx.py
worker/benchmark/: README.md  benchmark.py  benchmark_metrics.md  benchmark_results.json  dashboard.py  exporter.py  requirements.txt  results_nvidia_geforce_rtx_4090_20260518_012944.json  results_nvidia_rtx_2000_ada_generation_20260518_045511.json  results_nvidia_rtx_a5000_20260508_123542.json
worker/worker/: callback.py  config.py  main.py  progress.py  transcriber.py
(+232 files in other folders)
